Fix: Accessibility contrast on newsletter section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -747,7 +747,7 @@ section {
 
 #home-subscribe {
     padding:45px 15px;
-    background-color: #4F8A8B;
+    background-color: #07031A;
 }
 
 #home-subscribe-content {
@@ -762,12 +762,12 @@ section {
     padding: 0;
     font-size: 30px;
     color: #fff;
+    font-weight: 500;
 }
 #home-subscribe-content h3 small {
     display: block;
-    font-size: 15px;
+    font-size: 20px;
     color: #fff;
-    font-weight: 400;
 }
 
 #home-subscribe-content form {
@@ -776,38 +776,36 @@ section {
     font-weight: 400;
 }
 #home-subscribe-content form input {
-    color: #fff;
     margin: 0 15px 0 0;
-    background: transparent;
-    padding: 0;
+    background-color: #fff;
+    padding: 0 15px;
     border: none;
-    border-bottom:2px solid rgba(255,255,255,0.25);
     height: 45px;
     width: 256px;
-    font-size: 20px;
+    font-size: 16px;
 }
 #home-subscribe-content form input::placeholder {
     color: #fff;
 }
 #home-subscribe-content form button {
     margin: 0;
-    border: 2px solid #fff;
+    border: none;
     border-radius: 5px;
-    background: #4F8A8B;
     height: 50px;
     padding: 0 15px;
     width: 100px;
     font-size: 20px;
     letter-spacing: 2px;
-    color: #fff;
+    background: #ffcc00;
+    color: #07031A;
 }
 #home-subscribe-content form button:active {
-    background:#fff;
-    color: #4F8A8B;
+    background:#4F8A8B;
+    color: #fff;
 }
 #home-subscribe-content form button:hover {
-    background:#fff;
-    color: #4F8A8B;
+    background:#4F8A8B;
+    color: #fff;
 }
 
 
@@ -962,7 +960,6 @@ footer {
 
     #home-subscribe {
         padding:30px 15px;
-        background-color: #4F8A8B;
     }
 
     #home-subscribe-content {
